--- a/templates/nav-template.html
+++ b/templates/nav-template.html
@@ -18,7 +18,7 @@
                     <a class="nav-link nav-txt" aria-current="page" href="projects.html" id="projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-txt" aria-current="page" href="contact.html" id="contact">Contact</a>
+                    <a class="nav-link nav-txt" aria-current="page" data-bs-toggle="modal" data-bs-target="#contactModal" id="contact">Contact</a>
                 </li>
             </ul>
           </div>
