--- a/css/styles.css
+++ b/css/styles.css
@@ -38,9 +38,6 @@ img{
     padding-top: 5%;
 }
 
-.angled-gradient {
-    background-image: linear-gradient(white,transparent),url('../img/index/22.jpg');
-}
 
 /*----------------------Cards----------------------------------------------------*/
 
@@ -60,7 +57,6 @@ img{
     position: relative;
     z-index: 1;
 }
-
 
 .card[data-background="image"] .title, .card[data-background="image"] .stats, .card[data-background="image"] .category, .card[data-background="image"] .description, .card[data-background="image"] .content, .card[data-background="image"] .card-footer, .card[data-background="image"] small, .card[data-background="image"] .content a, .card[data-background="color"] .title, .card[data-background="color"] .stats, .card[data-background="color"] .category, .card[data-background="color"] .description, .card[data-background="color"] .content, .card[data-background="color"] .card-footer, .card[data-background="color"] small, .card[data-background="color"] .content a {
     color: #FFFFFF;
@@ -102,7 +98,7 @@ a:hover, a:focus {
     text-decoration: none;
 }
 
-/*-----------ProjectCards-----------------*/
+/*-----------Wrapper-----------------*/
 .wrapper {
     width: 100%;
     height: 600px;
@@ -194,7 +190,7 @@ input:checked + label .description_p {
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/0/03/Turing_Machine_Model_Davey_2012.jpg');
 }
 .card_p[for="c4"] {
-    background-image: url('../img/index/projects_interested.png');
+    background-image: url('../img/index/projects_interested.jpg');
 }
 
 .responsive-wrapper {
@@ -206,6 +202,7 @@ input:checked + label .description_p {
     }
 }
 
+/*--------------Carousel----------------------------*/
 .responsive-carousel {
     display: none;
   }
@@ -215,7 +212,7 @@ input:checked + label .description_p {
     }
 }
 
-/*--------- COLORS --------------*/
+/*--------- Colors --------------*/
 .card[data-color="blue"] {
     background: #b8d8d8;
 }
@@ -277,6 +274,52 @@ input:checked + label .description_p {
 .animated-link:hover:after {
     right: 0;
 }
+/*----------------Footer----------------*/
+.footer{
+    min-height: 500px;
+    background-image: rgb(54, 54, 54);
+}
+
+.footer-logo{
+    max-width: 80px;
+    margin:10px;
+}
+
+.footer-text{
+    font-size: 1.5rem;
+    padding:20px;
+    margin-bottom: 30px;
+    font-family: 'Quicksand',sans-serif;
+}
+
+.icons-socialmedia a{
+    width: 50px;
+    height: 50px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    padding: 2px;
+    margin: 10px;
+    border: 2px solid black;
+    border-radius: 50%;
+    transition: all 0.2s ease-in;
+
+}
+
+.icons-socialmedia svg{
+    color:black;
+    font-size:1.5rem;
+    transition: all 0.2s ease-in;
+}
+
+.icons-socialmedia a:hover{
+    background-color:black;
+}
+
+.icons-socialmedia a:hover svg{
+    color:white;
+}
+
 /*--------------------Font------------------------------*/
 @font-face {
     font-family: '3dumbregular';
